@@ -13,23 +13,27 @@ import com.interestcalc.domain.Contract;
 /**
  * Contract CSV Loader
  *
- * CSV columns (header):
- * PLYNO,
- * INS_ST,
- * GDCD,
- * RATE_CODE,
- * INS_CLSTR,
- * RL_PYM_TRM,
- * DFR_TRM,
- * AN_PY_STDT,
- * PR_BZCS_DSCNO,
- * AN_PY_TRM
+ * CSV columns (0-based):
+ * 0 PLYNO
+ * 1 INS_ST
+ * 2 GDCD
+ * 3 RATE_CODE
+ * 4 INS_CLSTR
+ * 5 RL_PYM_TRM
+ * 6 DFR_TRM
+ * 7 AN_PY_STDT
+ * 8 EXPCT_INRT
+ * 9 PR_NWCRT_TAMT
+ * 10 CRFW_PR_NWCRT_TAMT
+ * 11 PR_BZCS_DSCNO
+ * 12 PYM_CYCCD
+ * 13 AN_INS_TRM_FLGCD
+ * 14 AN_PYTCD
+ * 15 AN_PY_GIRT
+ * 16 AN_PY_TRM
  */
 public class ContractCsvLoader {
 
-    /**
-     * @return Map<PLYNO, Contract>
-     */
     public static Map<String, Contract> load(Path csvPath) throws IOException {
 
         Map<String, Contract> map = new HashMap<>();
@@ -50,49 +54,50 @@ public class ContractCsvLoader {
                     continue;
                 }
 
-                String[] t = line.split(",", -1);
+                String[] c = line.split(",", -1);
 
-                /*
-                 * CSV index mapping (0-based)
-                 * 0 PLYNO
-                 * 1 INS_ST
-                 * 2 GDCD
-                 * 3 RATE_CODE
-                 * 4 INS_CLSTR
-                 * 5 RL_PYM_TRM
-                 * 6 DFR_TRM
-                 * 7 AN_PY_STDT
-                 * 8 PR_BZCS_DSCNO
-                 * 9 AN_PY_TRM
-                 */
+                String plyNo = c[0];
+                LocalDate insSt = LocalDate.parse(c[1]);
+                String gdcd = c[2];
+                String rateCode = c[3];
+                LocalDate insClstr = LocalDate.parse(c[4]);
 
-                String plyNo = t[0].trim();
+                int rlPymTrm = parseInt(c[5]);
+                int dfrTrm = parseInt(c[6]);
 
-                LocalDate insStartDate = LocalDate.parse(t[1].trim());
-                String productCode = t[2].trim();
-                String rateCode = t[3].trim();
-                LocalDate insEndDate = LocalDate.parse(t[4].trim());
+                LocalDate annPyStdt = LocalDate.parse(c[7]);
+                double expctInrt = parseDouble(c[8]);
 
-                int payYears = parseInt(t[5]);
-                int deferYears = parseInt(t[6]);
+                double prNwcrtTamt = parseDouble(c[9]);
+                double crfwPrNwcrtTamt = parseDouble(c[10]);
 
-                LocalDate annuityDate = LocalDate.parse(t[7].trim());
-                String expenseKey = t[11].trim();
-                int annuityTerm = parseInt(t[16]);
+                String expenseKey = c[11];
+                String pymCyccd = c[12];
+                String annInsTrmFlgcd = c[13];
+                String annPytcd = c[14];
+                int annPyGirt = parseInt(c[15]);
+                int annPyTrm = parseInt(c[16]);
 
-                Contract c = new Contract(
+                Contract contract = new Contract(
                         plyNo,
-                        insStartDate,
-                        insEndDate,
-                        productCode,
+                        insSt,
+                        gdcd,
                         rateCode,
-                        payYears,
-                        deferYears,
-                        annuityDate,
-                        annuityTerm,
-                        expenseKey);
+                        insClstr,
+                        rlPymTrm,
+                        dfrTrm,
+                        annPyStdt,
+                        expctInrt,
+                        prNwcrtTamt,
+                        crfwPrNwcrtTamt,
+                        expenseKey,
+                        pymCyccd,
+                        annInsTrmFlgcd,
+                        annPytcd,
+                        annPyGirt,
+                        annPyTrm);
 
-                map.put(plyNo, c);
+                map.put(plyNo, contract);
             }
         }
 
@@ -100,9 +105,10 @@ public class ContractCsvLoader {
     }
 
     private static int parseInt(String s) {
-        if (s == null || s.trim().isEmpty()) {
-            return 0;
-        }
-        return Integer.parseInt(s.trim());
+        return (s == null || s.isBlank()) ? 0 : Integer.parseInt(s.trim());
+    }
+
+    private static double parseDouble(String s) {
+        return (s == null || s.isBlank()) ? 0.0 : Double.parseDouble(s.trim());
     }
 }
